@@ -5,6 +5,7 @@ New features, enhancements:
 
   * Strategy for allowing multiple users to use the same Timeline file.
   * The timeline view regains focus when the event editor is closed.
+  * Enter-key works in date and time fields of the event editor
   * Some help texts updated
   
 Bug fixes:
